--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="slider">
                      <div id="main-slider" class="carousel slide" data-ride="carousel">
                       <div class="carousel-inner">
-                        <h1 class=" text-center">Eat until you be Full</h1>
+                        <h1 class=" text-center">Eat until you be Full </h1>
                            <div class="overlay"></div>
                            <div class="carousel-item carousel-one active">   </div>
                            <div class="carousel-item carousel-two">          </div>
@@ -508,7 +508,7 @@
              <div class="container">
                  <div class="row">
                       <div class="col text-left text-uppercase">
-                     copyright 2018 El3anqaa Resturant &copy; all right reserved
+                     copyright 2018 habebt Mohamed Resturant &copy; all right reserved
                      </div>
                      <div class="col text-right">
                        <ul class="list-unstyled">
